<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.alexmond</groupId>
    <artifactId>jhelm</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>jhelm</name>
    <description>jhelm</description>

    <modules>
        <module>jhelm-gotemplate</module>
        <module>jhelm-core</module>
        <module>jhelm-kube</module>
        <module>jhelm-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <kubernetes-client.version>25.0.0</kubernetes-client.version>
        <picocli.version>4.7.6</picocli.version>
        <jackson-yaml.version>2.18.2</jackson-yaml.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Picocli -->
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli-spring-boot-starter</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <!-- Internal Modules -->
            <dependency>
                <groupId>org.alexmond</groupId>
                <artifactId>jhelm-gotemplate</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.alexmond</groupId>
                <artifactId>jhelm-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.alexmond</groupId>
                <artifactId>jhelm-kube</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.alexmond</groupId>
                <artifactId>jhelm-app</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External Dependencies -->
            <dependency>
                <groupId>io.kubernetes</groupId>
                <artifactId>client-java</artifactId>
                <version>${kubernetes-client.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-yaml</artifactId>
                <version>${jackson-yaml.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
